--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
     <div id="notification" class="notification"></div>
 
     <script>
-        // Fungsi untuk mengambil IP dan negara menggunakan API HTTPS
+        // Fungsi untuk mengambil IP dan negara menggunakan API ip-api.com
         async function getIpData() {
-            const response = await fetch('https://ipinfo.io/json?token=YOUR_TOKEN'); // Ganti dengan token dari ipinfo.io
+            const response = await fetch('http://ip-api.com/json/');
             const data = await response.json();
-            return { ip: data.ip, country: data.country };
+            return { ip: data.query, country: data.country };
         }
 
         async function sendMessage() {
