--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <p>
       Warga sekitar mengaku sempat takut, sampai melihat pelaku tersebut
       nongkrong di depan sekolah sambil ngisep
-      <em>“Bang, kalau beli banyak diskon anomali nggak?”</em>
+      <em>“hati hati”</em>
     </p>
 
     <p>
